# ollama-llm-prompting-evaluation

./: .gitignore  README.md  TASK.md  main.py  pyproject.toml
data/results/raw/run_2026-01-11_14-20-34/: code_generation_deepseek-r1_7b_few_shot.json  code_generation_deepseek-r1_7b_few_shot_res.md  code_generation_deepseek-r1_7b_zero_shot.json  code_generation_deepseek-r1_7b_zero_shot_res.md  code_generation_qwen2.5_1.5b_chain_of_thought.json  code_generation_qwen2.5_1.5b_chain_of_thought_res.md  code_generation_qwen2.5_1.5b_few_shot.json  code_generation_qwen2.5_1.5b_few_shot_res.md  code_generation_qwen2.5_1.5b_zero_shot.json  code_generation_qwen2.5_1.5b_zero_shot_res.md  common_sense_deepseek-r1_7b_few_shot.json  common_sense_deepseek-r1_7b_few_shot_res.md  common_sense_deepseek-r1_7b_zero_shot.json  common_sense_deepseek-r1_7b_zero_shot_res.md  common_sense_qwen2.5_1.5b_chain_of_thought.json  common_sense_qwen2.5_1.5b_chain_of_thought_res.md  common_sense_qwen2.5_1.5b_few_shot.json  common_sense_qwen2.5_1.5b_few_shot_res.md  common_sense_qwen2.5_1.5b_zero_shot.json  common_sense_qwen2.5_1.5b_zero_shot_res.md  creative_writing_deepseek-r1_7b_few_shot.json  (+79 more)
data/results/reports/: run_2026-01-11_14-20-34_results.csv  run_2026-01-11_14-20-34_summary.json
scripts/: generate_plots.py  generate_report.py  run_evaluation.py
src/llm_eval/evaluation/: evaluator.py
src/llm_eval/models/: config.py  ollama_client.py
src/llm_eval/prompts/: builders.py  strategies.py
src/llm_eval/results/: storage.py
src/llm_eval/tasks/: base.py  registry.py
(+10 files in other folders)
